--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: Gilroy-ExtraBold;
+  src: url(./assets/fonts/Gilroy-ExtraBold.otf);
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Gilroy-Light;
+  src: url(./assets/fonts/Gilroy-Light.otf);
+  font-style: normal;
+}
+
+@layer utilities {
+  .section-min-height {
+    min-height: calc(100vh - 96px);
+  }
+}
+
+@layer base {
+  html {
+    @apply font-gilroy;
+  }
+}
