--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,7 +18,8 @@
 
 @layer utilities {
   .section-min-height {
-    min-height: calc(100vh - 96px);
+    /* min-height: calc(100vh - 364px); */
+    min-height: calc(100vh - 252px);
   }
 }
 
